﻿============================== next release ==============================
  
  new data (thanks to Leon Avakyan, Southern Federal University, Rostov-on-Don, Russia, for submitting data in YAML format!)
    other/intermetallics/AuAl2/Chen.yml
  new data (thanks to Baokun Song, University of Pennsylvania, USA!)
    other/perovskite/2D HOIP/Song-RP1.yml
    other/perovskite/2D HOIP/Song-RP2.yml
    other/perovskite/2D HOIP/Song-RP3.yml
    other/perovskite/2D HOIP/Song-RP4.yml
    other/perovskite/2D HOIP/Song-RP5.yml
    other/perovskite/2D HOIP/Song-DJ1.yml
    other/perovskite/2D HOIP/Song-DJ2.yml
    other/perovskite/2D HOIP/Song-DJ3.yml
    other/perovskite/2D HOIP/Song-DJ4.yml
    main/C/Song-HiPco.yml
    main/C/Song-HiPco.yml
  new data (thanks to Zheru Qiu, École Polytechnique Fédérale de Lausanne, Switzerland, for suggesting data!)
    main/Nb/Weaver.yml
    main/W/Weaver.yml
  new data (thanks to S EGYL!)
    main/CS2/Chemnitz.yml
  new data (thanks to Mariama Rebello de Sousa Dias, University of Richmond, VA, USA, for submitting numerical data!)
    other/mixed crystals/ZnO-CdO/Aguilar-10.yml
    other/mixed crystals/ZnO-CdO/Aguilar-25.yml
    other/mixed crystals/ZnO-CdO/Aguilar-40.yml
    other/mixed crystals/ZnO-CdO/Aguilar-50.yml
    other/mixed crystals/ZnO-CdO/Aguilar-63.yml
    other/mixed crystals/ZnO-CdO/Aguilar-75.yml
    other/mixed crystals/ZnO-CdO/Aguilar-90.yml
    main/ZnO/Aguilar.yml
  new data (thanks to Vladimir Zenin, University of Southern Denmark)
    main/Ag/Jiang.yml
    main/HfO2/Al-Kuhaili.yml
  new data (thanks to Penny Rowe, NorthWest Research Associates, Redmond, WA, USA, for submitting data in YAML format!)
    main/H2O/Rowe-240K.yml
    main/H2O/Rowe-253K.yml
    main/H2O/Rowe-263K.yml
    main/H2O/Rowe-273K.yml
  new data (thanks to Xiaoning Zhang, Harbin Institute of Technolog, China, for submitting data!)
    organic/(C16H14O3)n - polycarbonate/Zhang.yml
    organic/(C8H8)n - polystyren/Zhang.yml