@@ -1,0 +1,70 @@
+# this file is part of refractiveindex.info database
+# refractiveindex.info database is in the public domain
+# copyright and related rights waived via CC0 1.0
+
+REFERENCES: "L.-Y. Chen, D. W. Lynch. The optical properties of AuAl<sub>2</sub> and PtAl<sub>2</sub>, <a href=\"https://doi.org/10.1002/pssb.2221480136\"><i>Phys. Status Solidi B</i> <b>148</b>, 387-394 (1988)</a><br>(data points extracted from a figure)"
+COMMENTS: "Bulk sample. Room temperature."
+DATA:
+  - type: tabulated nk
+ data: |
+        0.22 1.24438 1.84221
+        0.23 1.24207 1.85032
+        0.24 1.25364 1.88226
+        0.25 1.24330 1.90281
+        0.26 1.28762 1.95801
+        0.27 1.34880 2.00658
+        0.28 1.42646 2.05657
+        0.29 1.52738 2.10268
+        0.30 1.61120 2.16562
+        0.31 1.68530 2.22249
+        0.32 1.74633 2.25699
+        0.33 1.81220 2.29413
+        0.34 1.87814 2.32716
+        0.35 1.92732 2.34867
+        0.36 1.95230 2.36158
+        0.37 1.97251 2.37269
+        0.38 1.98525 2.37704
+        0.39 1.99180 2.37624
+        0.40 1.99319 2.38362
+        0.41 1.99270 2.39583
+        0.42 1.98670 2.41419
+        0.43 1.97959 2.43046
+        0.44 1.97079 2.44744
+        0.45 1.95351 2.48224
+        0.46 1.94686 2.52281
+        0.47 1.94077 2.56153
+        0.48 1.92703 2.60954
+        0.49 1.91603 2.65801
+        0.50 1.90847 2.70587
+        0.51 1.90225 2.75071
+        0.52 1.89981 2.79475
+        0.53 1.90702 2.84291
+        0.54 1.91414 2.88864
+        0.55 1.91725 2.93718
+        0.56 1.91827 2.98378
+        0.57 1.91954 3.02824
+        0.58 1.92102 3.07072
+        0.59 1.92636 3.11401
+        0.60 1.94462 3.16977
+        0.61 1.96226 3.22313
+        0.62 1.97927 3.27401
+        0.63 1.99465 3.32193
+        0.64 2.00710 3.36632
+        0.65 2.01827 3.41032
+        0.66 2.02818 3.45411
+        0.67 2.03783 3.49612
+        0.68 2.05806 3.54273
+        0.69 2.07955 3.58860
+        0.70 2.10023 3.63261
+        0.71 2.12025 3.67466
+        0.72 2.14063 3.71322
+        0.73 2.16040 3.75012
+        0.74 2.17946 3.78565
+        0.75 2.19785 3.81994
+        0.76 2.21563 3.85304
+        0.77 2.23480 3.88617
+        0.78 2.25585 3.91961
+        0.79 2.27619 3.95194
+SPECS:
+ n_absolute: true
+ wavelength_vacuum: true
