@@ -1,0 +1,20 @@
+<!--
+this file is part of refractiveindex.info database
+refractiveindex.info database is in the public domain
+copyright and related rights waived via CC0 1.0
+-->
+
+<h1>Intermetallic</h1>
+
+<h2>Other names</h2>
+<ul>
+<li>Intermetallic compound</li>
+<li>Intermetallic alloy</li>
+<li>Ordered intermetallic alloy</li>
+<li>Long-range-ordered alloy</li>
+</ul>
+
+<h2>External links</h2>
+<ul>
+<li><a href="https://en.wikipedia.org/wiki/Intermetallic">Intermetallic - Wikipedia</a></li>
+</ul>
