@@ -10308,6 +10308,14 @@
         - PAGE: Supansomboon
           name: "Supansomboon et al. 2008: n,k 0.300-1.32 µm"
           data: "other/intermetallics/AuAl2/Supansomboon.yml"
+    - BOOK: PtAl2
+      name: "PtAl<sub>2</sub> (Platinum-aluminium intermetallic)"
+      info: "other/intermetallic.html"
+      content:
+        - DIVIDER: "Bulk"
+        - PAGE: Chen
+          name: "Chen and Lynch 1988: n,k 0.22-0.79 µm"
+          data: "other/intermetallics/PtAl2/Chen.yml"
     - DIVIDER: "Mixed crystals"
     - BOOK: HfO2-Y2O3
       name: "HfO<sub>2</sub>-Y<sub>2</sub>O<sub>3</sub> (Hafnium dioxide - Yttrium oxide)"
